# awto-playwrong

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  schema.sql
assets/: __init__.py  cache.py  classify.py  imgmeta.py  store.py
crawl/: AGENTS.md  __init__.py  browser.py  challenge.py  db.py  drive.py  graph.py  netblock.py  parse.py  ratelimit.py  render.py  report.py  run.py  store.py
docs/: AGENT-API.md  agent-behaviours.md  lessons.md
engine/: client.py  server.py  shared_browser.py  solve.py
helpers/: README.md  click.py  scroll.py
methods/: playwright-crawl.py  playwright-ctl.py  playwright-server.py
scripts/: attach-session.mjs  awto-play-provision.mjs  open-shared-profile-chrome.mjs  ph-browser-server.mjs  ph-capture-batch.mjs  ph-cdp-trace.mjs  ph-har-capture.mjs  ph-runtime-capture.mjs  ph-turnstile-test.mjs  ph-vision-click.mjs  ph-waterfall.mjs  smoke-test.mjs  st-apple-session.mjs  st-persistent-session.mjs  start-debug-chrome.mjs
